--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://akbar:akbar@schoolmanagement.ndgbinr.mongodb.net/?retryWrites=true&w=majority&appName=SchoolManagement
 PORT=7000
 MAX_STUDENTS_LIMIT=2
+FRONTEND_URI=http://localhost:3000
